--- a/try.html
+++ b/try.html
@@ -6,7 +6,10 @@
     <title>Document</title>
     <link rel="script" href="switch_statement.js" />
   </head>
-  <body style="text-align: center;">
+  <body style="text-align: center">
+    <button class="green">Green</button>
+    <button class="red">Red</button>
+    <button class="yellow">yellow</button>
     <h1 style="text-align: center">Switch statement</h1>
     <p id="demo">hello</p>
     <h1>if else</h1>
@@ -111,8 +114,18 @@
         // document.getElementById(
         //   'display'
         // ).textContent = `the higher bmi  is:${higher_bmi}`;
+      });
 
-        
+      document.querySelector(".green").addEventListener("click", function () {
+        document.querySelector("body").style.backgroundColor = "green";
+      });
+
+      document.querySelector(".red").addEventListener("click", function () {
+        document.querySelector("body").style.backgroundColor = "red";
+      });
+
+      document.querySelector(".yellow").addEventListener("click", function () {
+        document.querySelector("body").style.backgroundColor = "yellow";
       });
     </script>
   </body>
